Fix site height issue on Firefox

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,6 +60,7 @@ a#homepage-return:hover{
 
 .content {
     display:grid;
+    height: 100vh;
 }
 
 .top-ornament > h1 {
